maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:1: error: Missing closing brace `}' assumed here
override def run() {var x:Int=0;
^WallFollowerMaze:1: error: expected start of definition
override def run() {var x:Int=0;
         ^